--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,19 +123,29 @@
     gap: 12px;
     border-top: 1px solid #EDEDED;
     padding-top: 16px;
+    gap: 10px;
   }
   .news-card img {
     width: 90px;
     height: 60px;
     object-fit: cover;
   }
-  .news-card h6 {
+  .news-card p {
     font-size: 0.95rem;
-    font-weight: 500;
+    font-weight: 350;
     margin: 0;
-    line-height: 1.2;
-    
+    line-height: 1.5;
+    text-decoration: none!important;
+    color: #222;
+    flex: 1;
   }
   .news-card:hover h6 {
     text-decoration: underline;
+  }
+  .news-card a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none !important;
+    color: #222;
   }
