--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
     background-color: #000; /* black */
   }
   .navbar-nav .nav-link {
-    color: white;
+    color: white!important;
     font-size: 13px;
   }
   .navbar-nav .nav-link:hover {
@@ -142,10 +142,17 @@
   .news-card:hover h6 {
     text-decoration: underline;
   }
-  .news-card a {
+  /* .news-card a {
     display: flex;
     align-items: center;
     gap: 10px;
     text-decoration: none !important;
     color: #222;
+  } */
+  a{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none !important;
+    color: #222!important;
   }
